Fix text overflow in card

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -35,6 +35,9 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__like-button {
